updated body styles

--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@
 body {
     height: 100vh;
     font-family: var(--primary-font);
-    background-image: url('Image/map.png');
+    background-image: url('./Image/map.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 main {
