--- a/style.css
+++ b/style.css
@@ -35,6 +35,16 @@ main {
 
 }
 
+audio {
+    position: absolute;
+    width: 200px;
+    height: 30px;
+    overflow: hidden;
+    z-index: 1;
+    font-size: 25px;
+    text-align: center;
+}
+
 .card-container {
     position: relative;
     height: 100%;
