--- a/style.css
+++ b/style.css
@@ -35,14 +35,14 @@ main {
 
 }
 
-audio {
-    position: absolute;
-    width: 200px;
-    height: 30px;
-    overflow: hidden;
-    z-index: 1;
-    font-size: 25px;
-    text-align: center;
+video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0.65;
 }
 
 .card-container {
